--- a/us.html
+++ b/us.html
@@ -31,16 +31,16 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <a href="us.html">
-                    <img src="https://cdn-icons-png.flaticon.com/512/197/197484.png" style="width: 1.5rem; margin-right: 2rem" alt="Goldell Logo">
+                <a href="index.html">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3909/3909370.png" style="width: 1.5rem; margin-right: 2rem" alt="Goldell Logo">
                 </a>
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item mb-4 mb-lg-0">
-                        <a class="btn btn-outline-warning nav-link px-4" href="#">Logar</a>
+                        <a class="btn btn-outline-warning nav-link px-4" href="#">Login</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn btn-warning nav-link px-4" href="#">Registrar</a>
+                        <a class="btn btn-warning nav-link px-4" href="#">Register</a>
                     </li>
                 </ul>
             </div>
@@ -54,14 +54,14 @@
                 <!-- Texto do Hero -->
                 <div class="col-lg-5 text-center text-lg-left">
                     <h1 class="font-weight-bold">
-                        Uma plataforma de negociação <span class="text-warning">confiável</span> e <span
-                            class="text-warning">transparente</span>.
+                        A trading platform <span class="text-warning">reliable</span> and <span
+                            class="text-warning">transparent</span>.
                     </h1>
                     <p class="mt-3">
-                        Cadastre-se agora e ganhe <strong>10.000 USD</strong> em sua <span class="text-bold">conta
-                            demo</span> para começar a aprender a negociar!
+                        Register now and win <strong>10.000 USD</strong> in your <span class="text-bold">demo 
+                            account </span> to start learning to trade!
                     </p>
-                    <a href="#" class="btn btn-warning btn-lg text-dark font-weight-bold mt-4">Abra sua conta Demo</a>
+                    <a href="#" class="btn btn-warning btn-lg text-dark font-weight-bold mt-4">Open your demo account                    </a>
                 </div>
                 <!-- Imagem do Hero -->
                 <div class="col-lg-7 text-center mt-4 mt-lg-0">
@@ -77,7 +77,7 @@
         <div class="container text-center">
             <!-- Título -->
             <h2 class="font-weight-bold">
-                Descubra as <span class="text-warning">vantagens</span> e <span class="text-warning">inovações</span> da
+                Discover the <span class="text-warning">advantages</span> and <span class="text-warning">innovations</span> from the
                 Goldell
             </h2>
 
@@ -89,12 +89,12 @@
                             <span class="arrow"></span>
                         </div>
                         <h5>
-                            <span>Plataforma</span> de negociação
+                            <span>Trading</span> plataform
                         </h5>
                         <p>
-                            Oferecemos uma interface intuitiva que atende tanto iniciantes quanto traders experientes,
-                            com payout atrativo e ferramentas gráficas avançadas com cotações em tempo real, com
-                            gráficos profissionais do TradingView.
+                            We offer an intuitive interface that suits both beginners and experienced traders,
+                            with attractive payout and advanced graphical tools with real-time quotes, with
+                            professional charts from TradingView.
                         </p>
                     </div>
                 </div>
@@ -104,11 +104,11 @@
                             <span class="arrow"></span>
                         </div>
                         <h5>
-                            <span>Indicadores</span> de negociação
+                            <span>Indicators</span> trading
                         </h5>
                         <p>
-                            Selecionamos os indicadores de negociação mais úteis para você. Experimente-os em uma conta
-                            de teste para descobrir quais combinam melhor com seu estilo.
+                            We have selected the most useful trading indicators for you. Try them on one account
+                            test to find out which ones best suit your style.
                         </p>
                     </div>
                 </div>
@@ -118,12 +118,12 @@
                             <span class="arrow"></span>
                         </div>
                         <h5>
-                            <span>Transparência</span>
+                            <span>Transparency</span>
                         </h5>
                         <p>
-                            Nossa plataforma prioriza uma experiência excepcional ao trader, com suporte dedicado e
-                            atenção humanizada. Facilitamos transações financeiras com eficiência e ajudamos nossos
-                            usuários a alcançar seus objetivos financeiros.
+                            Our platform prioritizes an exceptional trader experience, with dedicated support and
+                            humanized attention. We facilitate financial transactions efficiently and help our
+                            users to achieve their financial goals.
                         </p>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
 
             <!-- Botão -->
             <a href="#" class="btn btn-warning btn-lg text-dark font-weight-bold mt-4">
-                Crie sua conta de forma rápida
+                Create your account quickly
             </a>
         </div>
     </section>
@@ -146,8 +146,8 @@
                 <div class="row">
                     <div class="col-lg-6 mx-auto">
                         <h2 class="font-weight-bold">
-                            <span class="text-warning">Aumente seu capital</span> fazendo as previsões corretas de
-                            negociação
+                            <span class="text-warning">Increase your capital</span> making correct predictions
+                            negotiation
                         </h2>
                     </div>
 
@@ -165,7 +165,7 @@
         <div class="container">
             <!-- Título -->
             <h2 class="text-center font-weight-bold">
-                <span class="text-warning">Perguntas</span> frequentes
+                <span class="text-warning">Frequently asked</span> questions
             </h2>
 
             <!-- Acordeons -->
@@ -176,16 +176,16 @@
                         <h5 class="mb-0">
                             <button class="btn btn-link text-light w-100 text-left" type="button" data-toggle="collapse"
                                 data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> Como negociar na
+                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> How to negotiate on
                                 Goldell?
                             </button>
                         </h5>
                     </div>
                     <div id="collapseOne" class="collapse show" aria-labelledby="faqOne" data-parent="#faqAccordion">
                         <div class="card-body text-muted">
-                            Oferecemos uma interface intuitiva que atende tanto iniciantes quanto traders experientes,
-                            com payout atrativo e ferramentas gráficas avançadas com cotações em tempo real, com
-                            gráficos profissionais do TradingView.
+                            We offer an intuitive interface that suits both beginners and experienced traders,
+                            with attractive payout and advanced graphical tools with real-time quotes, with
+                            professional charts from TradingView.
                         </div>
                     </div>
                 </div>
@@ -197,15 +197,14 @@
                             <button class="btn btn-link text-light w-100 text-left collapsed" type="button"
                                 data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
                                 aria-controls="collapseTwo">
-                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> Qual é o menor
-                                valor que posso
-                                depositar?
+                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> What is the smallest
+                                value i can deposit?
                             </button>
                         </h5>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="faqTwo" data-parent="#faqAccordion">
                         <div class="card-body text-muted">
-                            O menor valor para depósito é R$ 50.
+                            The lowest deposit amount is R$50.
                         </div>
                     </div>
                 </div>
@@ -217,14 +216,14 @@
                             <button class="btn btn-link text-light w-100 text-left collapsed" type="button"
                                 data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
                                 aria-controls="collapseThree">
-                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> Qual o valor
-                                mínimo para negociar?
+                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2">What is the value
+                                minimum to negotiate?
                             </button>
                         </h5>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="faqThree" data-parent="#faqAccordion">
                         <div class="card-body text-muted">
-                            O valor mínimo para negociação é R$ 2.
+                            The minimum value for negotiation is R$2.
                         </div>
                     </div>
                 </div>
@@ -236,15 +235,14 @@
                             <button class="btn btn-link text-light w-100 text-left collapsed" type="button"
                                 data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
                                 aria-controls="collapseFour">
-                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> Posso fazer
-                                negociações com meu
-                                celular?
+                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2">Can I do
+                                negotiations with my cell phone?
                             </button>
                         </h5>
                     </div>
                     <div id="collapseFour" class="collapse" aria-labelledby="faqFour" data-parent="#faqAccordion">
                         <div class="card-body text-muted">
-                            Sim, nossa plataforma é totalmente responsiva e otimizada para dispositivos móveis.
+                            Yes, our platform is fully responsive and optimized for mobile devices.
                         </div>
                     </div>
                 </div>
@@ -256,15 +254,14 @@
                             <button class="btn btn-link text-light w-100 text-left collapsed" type="button"
                                 data-toggle="collapse" data-target="#collapseFive" aria-expanded="false"
                                 aria-controls="collapseFive">
-                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> Quanto tempo leva
-                                para fazer um
-                                saque?
+                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> How long does it take
+                                to make a withdrawals?
                             </button>
                         </h5>
                     </div>
                     <div id="collapseFive" class="collapse" aria-labelledby="faqFive" data-parent="#faqAccordion">
                         <div class="card-body text-muted">
-                            Saques são processados em até 24 horas úteis.
+                            Withdrawals are processed within 24 business hours.
                         </div>
                     </div>
                 </div>
@@ -276,15 +273,14 @@
                             <button class="btn btn-link text-light w-100 text-left collapsed" type="button"
                                 data-toggle="collapse" data-target="#collapseSix" aria-expanded="false"
                                 aria-controls="collapseSix">
-                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> Existe alguma
-                                taxa para depositar
-                                ou retirar?
+                                <img src="./static/src/img/icon.svg" alt="Seta" class="svg-icon mr-2"> Is there any
+                                fee to deposit or withdraw?
                             </button>
                         </h5>
                     </div>
                     <div id="collapseSix" class="collapse" aria-labelledby="faqSix" data-parent="#faqAccordion">
                         <div class="card-body text-muted">
-                            Não, não cobramos taxas para depósitos ou retiradas.
+                            No, we do not charge fees for deposits or withdrawals.
                         </div>
                     </div>
                 </div>
@@ -302,24 +298,24 @@
                 <!-- Logo e Direitos Autorais -->
                 <div class="col-md-4 text-center text-md-left mb-3 mb-md-0">
                     <img class=" mb-4" src="./static/src/img/logo.svg" alt="">
-                    <p class="mb-0">Direitos autorais © 2025 Goldell</p>
-                    <p class="mb-0">Todos os direitos reservados</p>
+                    <p class="mb-0">Copyright © 2025 Goldell</p>
+                    <p class="mb-0">All rights reserved</p>
                 </div>
 
                 <!-- Links da Empresa -->
                 <div class="col-md-4 text-center text-md-left mb-3 mb-md-0">
-                    <h6 class="font-weight-bold mb-4">Empresa</h6>
+                    <h6 class="font-weight-bold mb-4">Enterprise</h6>
                     <ul class="list-unstyled mb-0">
-                        <li><a href="#" class="text-light">Termos de uso</a></li>
-                        <li><a href="#" class="text-light">Privacidade</a></li>
+                        <li><a href="#" class="text-light">Terms of use</a></li>
+                        <li><a href="#" class="text-light">Privacy</a></li>
                     </ul>
                 </div>
 
                 <!-- Links do Programa de Afiliados -->
                 <div class="col-md-4 text-center text-md-left">
-                    <h6 class="font-weight-bold mb-4">Programa de afiliados</h6>
+                    <h6 class="font-weight-bold mb-4">Affiliate program</h6>
                     <ul class="list-unstyled mb-0">
-                        <li><a href="#" class="text-light">Seja um parceiro <span class="ml-1">&#8599;</span></a></li>
+                        <li><a href="#" class="text-light">Be a partner<span class="ml-1">&#8599;</span></a></li>
                     </ul>
                 </div>
             </div>
